# manga-reader

./: .gitignore  CLAUDE.md  README.md  db.py  download_cover.py  helpers.py  main.py  pyproject.toml  routes.py  run.sh  views.py
static/: style.css
templates/: base.html  chapters.html  directory.html  index.html  reader.html
