[project]
name = "manga-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask",
    "flask-caching",
    "mangadex-client",
    "requests",
    "python-dotenv",
]

[tool.uv.sources]
mangadex-client = { git = "https://github.com/wmar-dev/mangadex-client.git" }
